--- a/wandao.tt
+++ b/wandao.tt
@@ -36,13 +36,16 @@
 /al nofushou {/var hasfushou 0;/showme nofushou;}
 /ac {^你抽出一把明晃晃的圆月弯刀}{iblade}
 /ac {^你装备%0棋子作武器}{ianqi}
+/ac {^你将仙人刺握在手中}{ianqi}
 /ac {^你放下手中的圆月弯刀}{noblade}
 /ac {^你放下手中的刀鞘}{nofushou}
 /ac {^你抽出一把明晃晃的刀鞘}{ifushou}
 /ac {^你放下手中的%0棋子}{noanqi}
+/ac {^你放下手中的仙人刺}{noanqi}
 /ac {^  √圆月弯刀(jade2)}{iblade}
 /ac {^    圆月弯刀(jade2)}{noblade}
 /ac {^  √%0(go piece)}{ianqi}
+/ac {^  √%0(cactus needle)}{ianqi}
 /ac {^  √刀鞘(jade)}{ifushou}
 /ac {^    刀鞘(jade)}{nofushou}
 /al wifushou {/if {$hasfushou==0}{wi jade}}
@@ -83,6 +86,7 @@
 /al wk {wianqi;perform wukongxuanliu;/showme ---- busy npc}
 /nop 『红藕香残』hongouxiangcan
 /al ho {wianqi;perform hongouxiangcan;/showme ---- stop npc}
+/al fl {wianqi;perform fengloufeiyan;/showme ---- 5 hit npc}
 /nop 技能检查
 /var myok 1
 /var bgok 0
@@ -140,6 +144,7 @@
 /ac {^( 你已经陷入半昏迷状态，神智全失}{;}
 /ac {^你所选用的武功中没有这种必杀技。}{;}
 /ac {^『无空漩流』只能对战}{sk}
+/ac {^『风漏飞烟』只能对战}{sk}
 /read gag.sc
 /read path.sc
 /read normal.sc
@@ -175,3 +180,15 @@
                          }
 /al wim {wifushou}
 /ac {^你还需等待%1秒钟才能再次施出『无空漩流』}{ho}
+/ac {^你还需等待%1秒钟才能再次施出『红藕香残』}{fl}
+/al fy2room {wlk;do d,s,w,u,e,u,u,u,u,u,u,u,u,u;roomin;nwlk}
+/al room2fy {pl {wlk;out;d;d;d;d;d;d;d;d;d;w;d;e;n;u;nwlk};pr}
+/al roomin {928}
+/al getitem {
+    pick needle;
+    get 1200 needle from cactus bonsai;
+     stack;
+     retrieve 5954;
+     remove all;
+     wear all
+}
