--- a/claw.tt
+++ b/claw.tt
@@ -174,6 +174,7 @@
 /ac {^任务被你完}{wk}
 /al eatall {gb meat;drink dai;de2 {eat meat}}
 /ac {^看起来%0想杀死你！}{
+            wi zhufu sword;
             wifushou;
             /var knpc_name %0;
             iskill
